--- a/css/style.css
+++ b/css/style.css
@@ -1891,18 +1891,18 @@ body {
   inset: 0;
   border-radius: 24px;
   pointer-events: none;
-  background: conic-gradient(
+  /* background: conic-gradient(
     from 180deg at 50% 50%,
     rgba(100, 169, 214, 0.28),
     rgba(177, 214, 233, 0.28),
     rgba(100, 169, 214, 0.28)
-  );
+  ); 
   mask: url(mask-shape.svg) no-repeat center / contain;
   -webkit-mask: url(mask-shape.svg) no-repeat center / contain;
   -webkit-mask-composite: xor;
   mask-composite: exclude;
   padding: 1px;
-  animation: tms-frame 6s linear infinite;
+  animation: tms-frame 6s linear infinite; */
 }
 @keyframes tms-frame {
   to {
@@ -3942,3 +3942,18 @@ img {
     border-bottom-right-radius: 12px;
   }
 }
+
+/* Our Team */
+.team .tms-viewport > .tms-track {
+  scrollbar-width: none;
+
+}
+.team .tms-viewport > .tms-track::-webkit-scrollbar {
+  display: none;
+}
+.team .tms-viewport .tms-track .tms-slide .tms-card .tms-top img {
+ align-items: center;
+ justify-content: center;
+ margin: 0 auto;
+}
+
