feat: add fontawesome offline and get image from the sftp server

--- a/css/about.css
+++ b/css/about.css
@@ -17,7 +17,7 @@
 
 /* About hero / wrapper  - Core Value*/
 .about-us {
-  background-image: url("https://res.cloudinary.com/drselhsl4/image/upload/v1761146427/EcoPrintGeneration/img/mpnmk2ospjmbqje2ctvv.png");
+  background-image: url("https://kifaru.infi-saas.com/media/Eco-Print/img/mpnmk2ospjmbqje2ctvv.png");
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
